--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <div class="topnav" id="myTopnav">
+                <div class="nav-left">
+                    <a href="#" class="active">Кулинарные тайны</a>
+                    <a href="#">Рецепты</a>
+                    <a href="#">Авторы</a>
+                    <a href="#">База</a>
+                </div>
+                <div class="nav-right">
+                    <a href="#">Войти</a>
+                    <a href="#">Зарегистрироваться</a>
+                </div>
+                
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                  <i class="fa fa-bars"></i>
+                </a>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
