--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
         <header>
             <div class="topnav" id="myTopnav">
-                <div class="nav-left">
+
                     <a href="#" class="active">Кулинарные тайны</a>
                     <a href="#">Рецепты</a>
                     <a href="#">Авторы</a>
                     <a href="#">База</a>
-                </div>
-                <div class="nav-right">
+
+
                     <a href="#">Войти</a>
                     <a href="#">Зарегистрироваться</a>
-                </div>
+
                 
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                   <i class="fa fa-bars"></i>
