--- a/index.html
+++ b/index.html
@@ -9,22 +9,26 @@
 <body>
     <div class="container">
         <header>
-            <div class="topnav" id="myTopnav">
-
-                    <a href="#" class="active">Кулинарные тайны</a>
-                    <a href="#">Рецепты</a>
-                    <a href="#">Авторы</a>
-                    <a href="#">База</a>
-
-
-                    <a href="#">Войти</a>
-                    <a href="#">Зарегистрироваться</a>
-
-                
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                  <i class="fa fa-bars"></i>
-                </a>
-            </div>
+            <div class="navbar">
+                <div class="logo">
+                  <h2>EDA.RU</h2>
+                </div>
+                <ul class="links">
+                  <li><a href="#">Главная</a></li>
+                  <li><a href="#">Рецепты</a></li>
+                  <li><a href="#">Авторы</a></li>
+                  <li><a href="#">База</a></li>
+                </ul>
+                <div class="right">
+                    <button>Войти</button>
+                    <button>Зарегистрироваться</button>
+                </div>
+                <div class="toggle">
+                  <div class="line1"></div>
+                  <div class="line2"></div>
+                  <div class="line3"></div>
+                </div>
+              </div>
         </header>
     </div>
 </body>
