--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Lato&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -39,6 +42,14 @@
                 </ul>
             </div>
         </header>
+        <div class="main">
+            <h1>Кулинарные тайны: Искусство готовить вкусно и легко</h1>
+            <p>Откройте мир вкуса и наслаждайтесь разнообразием рецептов для каждого вкуса</p>
+            <form action="search.php" method="GET" class="search">
+                <input type="text" name="query" placeholder="Поиск по названию рецепта или ингредиентам">
+                <button type="submit">Искать</button>
+            </form>
+        </div>
     </div>
     <script src="js/script.js"></script>
 </body>
